--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -294,6 +294,15 @@ h3 {
   opacity: 0.8;
 }
 
+/* For the filtering*/
+.portfolio__project-container {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+
 /* Skills Page*/
 .image-aside {
   display: none;
@@ -379,6 +388,37 @@ h3 {
   background-color: rgba(193, 214, 247, 0.5);
   padding: 10px;
   margin-bottom: 20px;
+}
+
+/*New Swiper*/
+.card {
+  width: 100%;
+  border-radius: 15px;
+  background-color: rgba(193, 214, 247, 0.5);
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.slide-content {
+  margin: 0 40px;
+  /* background-color: #ef4565; */
+  overflow: hidden;
+  border-radius: 15px;
+}
+
+.slide-container {
+  /* max-width: 1120px; */
+  width: 100%;
+  /* background-color: gray; */
+  padding: 40px 0;
+}
+
+.testimonial__header {
+  text-align: center;
+}
+
+.testimonials__section {
+  margin-top: 100px;
 }
 
 /*Contact Me*/
@@ -538,7 +578,7 @@ input[type="submit"]:hover {
   }
 
   /*About Page*/
-  .about-vid {
+  .main__about-vid {
     display: grid;
     grid-template-columns: 1fr 1fr;
     /*justify-items: center;*/
@@ -595,6 +635,8 @@ input[type="submit"]:hover {
   .center {
     grid-column-start: 2;
   } */
+
+  /* Sliders
   .testimonials {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -604,11 +646,60 @@ input[type="submit"]:hover {
   }
   .testimonials h2 {
     grid-column: span 2;
-  }
+  }*/
   /* .sami {
     justify-self: end;
   } */
   /*Portfolio Page*/
+
+  /* .testimonials {
+    display: flex;
+    overflow: hidden;
+    width: 100%;
+    transition: transform 0.5s ease-in-out;
+  }
+
+  .single-testimonial {
+    flex: 0 0 100%;
+    box-sizing: border-box;
+  }
+
+  .slider-controls {
+    margin-top: 10px;
+    text-align: center;
+  } */
+
+  /* .swiper {
+    width: 600px;
+    height: 300px;
+  }
+
+  .swiper-slide {
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .swiper-slide-active {
+    z-index: 1;
+  }
+
+  .swiper-slide-active .card {
+    box-shadow: 0 8px 30px -7px #c9dff0;
+    opacity: 1;
+    transform: scale(1.5);
+  }
+
+  .swiper {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .swiper-button-next:focus,
+  .swiper-button-prev:focus {
+    outline: none;
+  }*/
+
   .portfolio__ul {
     display: flex;
     flex-direction: row;
@@ -620,7 +711,7 @@ input[type="submit"]:hover {
   .portfolio__total-project-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(auto, 1fr);
   }
   .portfolio__project-center-content {
     max-height: 245px;
